# WeatherCast

./: .gitignore  README.md  pyproject.toml
src/utils/: WeatherRequest.py  botWeatherCast.py  config.py
tests/: teste.py
